# agent_bench

./: .env.example  .env.example.pro  .gitignore  AGENT.md  AGENTS.md  README.md  STATUS.md  agent_framework_it1.md  alembic.ini  commands.md  db_commands.md  docker-compose.yml  pyproject.toml  signal_gather_news_analys.md  source_whitelist.json  update_vps_app.md
.github/: README.md
.github/workflows/: pr-verification.yml  vps-e2e-test1.yml
apps/claude_agent/: __init__.py  app.py  artifacts.py  config.py  debugging_readme.md  human_only_readme.md  jobs.py  orchestrator.py  routes.py  runner.py  schemas.py
apps/rag_adhoc/: __init__.py  app.py  bootstrap.py  config.py  deps.py  env.example
apps/signal_gather/: __init__.py
apps/signalgather_web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
claude_agent_fe/: app_testing_scenario.md
claude_agent_fe/.claude/: settings.local.json
claude_agent_fe/rag_test/: export-env.sh  report1.md
corpus/: L1_manifest.md  L2b_run_state.template.json  README.md
docker/: Dockerfile  Dockerfile.claude_agent  entrypoint-api.sh
docs/ops/: commands.md  (+3 more)
github_issue/: IMPLEMENTATION_newsfind_pipeline_v1.md  IMPLEMENTATION_reproducible_artifacts_and_cache.md  newsfind_pipeline_v1.md
infra/: docker-compose.slot-minimal.yml  docker-compose.test1.yml  docker-compose.test2.yml  docker-compose.vps-bind-local.yml
local_knowledge_sources/: oil101.txt
oil_rag_collector/: README.md  __init__.py  cli.py  collector.py  discover.py  eia_api.py  eia_countries.py  fetch.py  models.py  registry.py  static_batch.py
scripts/: README.md  compare_evaluations.sh  corpus_l1_to_l2_text.py  evaluate_newsfind_run.py  evaluate_output.sh  l2b_manual_curator.py  list_runs.sh  qa_check_run.sh  replay_session.py  test_full_pipeline.sh  test_newsfind.sh  test_refresh_cycle.sh  test_topic.sh  test_vector_runner.sh  vps_deploy_caddy.sh  vps_setup_test_slot.sh
source_crawler/: README.md  __init__.py  apply_qa.py  base.py  browser_assist.py  cli.py  extract.py  inventory.py  labels.py  models.py  pipeline_log.py  promote.py  qa_pack.py  registry.py  runner.py  store.py
source_ingest/: __init__.py  chunk_builder.py  chunk_design.md  env_bootstrap.py  from_collected.py  ingest.py  preprocess.py  preprocess_core.py  schemas.py  steps.md  text_extract.py
testing/: README.md  app_testing_scenario.md  output_evaluation_rubric.md  qa_rules.json  ui_smoke_checklist.md  vectors.json
tests/: test_evaluate_newsfind_run.py
(+909 files in other folders)
