[project]
name = "agentic-platform"
version = "0.1.0"
description = "Newsfind topic intelligence monorepo (claude_agent + RAG + agentic_core auth/DB)"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    "fastapi-users[sqlalchemy]>=13.0",
    "structlog>=24.1",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20",
    "openai>=1.40",
    "pypdf>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["libs"]
include = ["agentic_core*", "eval_framework*"]

[tool.setuptools.package-data]
eval_framework = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
